change from content to container

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -62,4 +62,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/tpa-reactive/tpa-reactive-user.html">
 
 <link rel="import" href="./tpa-welcome/tpa-welcome.html">
+<link rel="import" href="./tpa-quick/tpa-quick.html">
+<link rel="import" href="./tpa-container/tpa-container.html">
 
