--- a/app/elements/tpa-container/tpa-container.html
+++ b/app/elements/tpa-container/tpa-container.html
@@ -5,6 +5,7 @@
         .container {
             position: relative;
             max-width: 1200px;
+            padding: 0 38px;
             margin: 0 auto;
             left:0;
             right:0;
