--- a/app/elements/tpa-quick/tpa-quick.html
+++ b/app/elements/tpa-quick/tpa-quick.html
@@ -2,6 +2,7 @@
 <link rel="import" href="../../bower_components/tpa-money-transfer/tpa-money-transfer.html">
 
 <link rel="import" href="../../bower_components/paper-fab/paper-fab.html">
+<link rel="import" href="../../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../../bower_components/paper-fab-menu/paper-fab-menu.html">
 <link rel="import" href="../../bower_components/paper-fab-menu/paper-fab-menu-item.html">
 <link rel="import" href="../../bower_components/tpa-toast-action/tpa-toast-action.html">
@@ -21,20 +22,14 @@
 
         paper-fab {
             position: absolute;
-            bottom: 10px;
-            right: -10px;
-        }
-
-        paper-fab-menu {
-            position: absolute;
-            bottom: 10px;
-            right: -10px;
+            bottom: 20px;
+            right: 20px;
         }
 
         tpa-toast-action {
             position: absolute;
             bottom: 0px;
-            right: 70px;
+            right: 100px;
             height: 500px;
             width: 400px;
         }
@@ -50,22 +45,17 @@
 
         <tpa-reactive-user id="reactiveUser"></tpa-reactive-user>
 
-        <tpa-container class="quick">
-            
-            <tpa-toast-action id="toastAction">
+        <div class="quick">
+
+            <tpa-toast-action id="toastAction" title="Money transfer">
                 <tpa-money-transfer id="moneyTransfer"></tpa-money-transfer>
+                <paper-button class="primary">Submit</paper-button>
             </tpa-toast-action>
 
             <paper-fab icon="add" title="plus" on-tap="open"></paper-fab>
 
-        </tpa-container>
+        </div>
 
-
-        <paper-fab-menu icon="add" position="vertical">
-            <paper-fab-menu-item label="Polymer" icon="polymer"></paper-fab-menu-item>
-            <paper-fab-menu-item label="Favorites" icon="star"></paper-fab-menu-item>
-            <paper-fab-menu-item label="Refresh" icon="refresh"></paper-fab-menu-item>
-        </paper-fab-menu>
     </template>
 
     <script>
