--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -64,4 +64,5 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="./tpa-welcome/tpa-welcome.html">
 <link rel="import" href="./tpa-quick/tpa-quick.html">
 <link rel="import" href="./tpa-container/tpa-container.html">
+<link rel="import" href="./tpa-notification/tpa-notification.html">
 
