--- a/app/index.html
+++ b/app/index.html
@@ -199,6 +199,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <tpa-quick></tpa-quick>
 
+    <tpa-notification></tpa-notification>
+
     <paper-toast id="toast">
         <span class="toast-hide-button" role="button" tabindex="0" onclick="app.$.toast.hide()">Ok</span>
     </paper-toast>
