--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -14,6 +14,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
+<link rel="import" href="../bower_components/iron-localstorage/iron-localstorage.html">
 <link rel="import" href="../bower_components/neon-animation/neon-animated-pages.html">
 <link rel="import" href="../bower_components/neon-animation/neon-animatable.html">
 <link rel="import" href="../bower_components/neon-animation/neon-animations.html">
@@ -60,6 +61,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/tpa-reactive/tpa-reactive-transactions.html">
 <link rel="import" href="../bower_components/tpa-reactive/tpa-reactive-products.html">
 <link rel="import" href="../bower_components/tpa-reactive/tpa-reactive-user.html">
+
+<link rel="import" href="../bower_components/tpa-daily-banking/tpa-daily-banking.html">
 
 <link rel="import" href="./tpa-welcome/tpa-welcome.html">
 <link rel="import" href="./tpa-quick/tpa-quick.html">
