--- a/app/index.html
+++ b/app/index.html
@@ -81,6 +81,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <tpa-reactive-user></tpa-reactive-user>
     </tpa-reactive-hub>
 
+    <tpa-ajax auto id="getBootstrapData" url="{{services.bootstrap}}" handle-as="json"
+              last-response="{{bootstrapResponse}}"></tpa-ajax>
+
 
     <paper-drawer-panel id="paperDrawerPanel" responsive-width="840px" force-narrow>
         <!-- Drawer Scroll Header Panel -->
@@ -100,104 +103,58 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                     </paper-item>
                 </template>
             </paper-menu>
+
         </paper-scroll-header-panel>
 
         <div main>
-            <tpa-ajax auto id="getBootstrapData" url="{{services.bootstrap}}" handle-as="json"
-                      last-response="{{bootstrapResponse}}"></tpa-ajax>
+
             <app-header-layout has-scrolling-region>
-                <app-header style="box-shadow: 0 0 4px rgba(0,0,0,.14), 0 4px 8px rgba(0,0,0,.28);" effects="material"
-                            reveals>
+                <app-header effects="material" reveals>
                     <tpa-top-bar class="paper-header"></tpa-top-bar>
-                    <tpa-nav-bar base-url="{{baseUrl}}#/" tabs="[[bootstrapResponse.tabs]]"></tpa-nav-bar>
                 </app-header>
 
+                <iron-localstorage name="login" value="{{login}}" ></iron-localstorage>
+
+                <template is="dom-if" if="{{!login}}">
+                    <tpa-welcome></tpa-welcome>
+                </template>
+
                 <!-- Main Content -->
-                <tpa-container>
+                <template is="dom-if" if="{{login}}">
+                    <tpa-container>
 
-                    <neon-animated-pages id="mainPages" attr-for-selected="data-route" selected="{{data.pageName}}"
-                                         fallback-selection="home" entry-animation="scale-up-animation"
-                                         exit-animation="fade-out-animation">
-                        <section data-route="splash" style="height: 700px">
-                            <tpa-welcome></tpa-welcome>
-                        </section>
+                        <neon-animated-pages id="mainPages" attr-for-selected="data-route" selected="{{data.pageName}}"
+                                             fallback-selection="home" entry-animation="scale-up-animation"
+                                             exit-animation="fade-out-animation">
 
-                        <section data-route="home">
-                            <template is="dom-if" if="{{isSelected(data.pageName, 'home')}}">
-                                <link rel="import" href="elements/tpa-app-layout/tpa-app-layout.html">
-                                <tpa-app-layout></tpa-app-layout>
-                            </template>
-                        </section>
+                            <section data-route="home">
+                                <tpa-daily-banking></tpa-daily-banking>
+                            </section>
 
-                        <section data-route="users">
-                            <template is="dom-if" if="{{isSelected(data.pageName, 'users')}}">
-                                <link rel="import" href="elements/tpa-pages/tpa-user-page.html">
-                                <tpa-user-page></tpa-user-page>
-                            </template>
-                        </section>
+                            <section data-route="settings">
+                                <template is="dom-if" if="{{isSelected(data.pageName, 'settings')}}">
+                                    <link rel="import" href="elements/tpa-pages/tpa-settings-page.html">
+                                    <tpa-settings-page></tpa-settings-page>
+                                </template>
+                            </section>
 
-                        <section data-route="savingsgoals">
-                            <template is="dom-if" if="{{isSelected(data.pageName, 'savingsgoals')}}">
-                                <link rel="import" href="elements/tpa-pages/tpa-savingsgoals-page.html">
-                                <tpa-savingsgoals-page></tpa-savingsgoals-page>
-                            </template>
-                        </section>
+                            <section data-route="feedback">
+                                <template is="dom-if" if="{{isSelected(data.pageName, 'feedback')}}">
+                                    <link rel="import" href="elements/tpa-pages/tpa-feedback-page.html">
+                                    <tpa-feedback-page></tpa-feedback-page>
+                                </template>
+                            </section>
 
-                        <section data-route="trading">
-                            <template is="dom-if" if="{{isSelected(data.pageName, 'trading')}}">
-                                <link rel="import" href="elements/tpa-pages/tpa-trading-page.html">
-                                <tpa-trading-page></tpa-trading-page>
-                            </template>
-                        </section>
+                        </neon-animated-pages>
+                    </tpa-container>
 
-                        <section data-route="mortgage">
-                            <template is="dom-if" if="{{isSelected(data.pageName, 'mortgage')}}">
-                                <link rel="import" href="elements/tpa-pages/tpa-mortgage-page.html">
-                                <tpa-mortgage-page></tpa-mortgage-page>
-                            </template>
-                        </section>
-
-                        <section data-route="loans">
-                            <template is="dom-if" if="{{isSelected(data.pageName, 'loans')}}">
-                                <link rel="import" href="elements/tpa-pages/tpa-loans-page.html">
-                                <tpa-loans-page></tpa-loans-page>
-                            </template>
-                        </section>
-
-                        <section data-route="insurance">
-                            <template is="dom-if" if="{{isSelected(data.pageName, 'insurance')}}">
-                                <link rel="import" href="elements/tpa-pages/tpa-insurance-page.html">
-                                <tpa-insurance-page></tpa-insurance-page>
-                            </template>
-                        </section>
-
-                        <section data-route="contact">
-                            <template is="dom-if" if="{{isSelected(data.pageName, 'contact')}}">
-                                <link rel="import" href="elements/tpa-pages/tpa-contact-page.html">
-                                <tpa-contact-page></tpa-contact-page>
-                            </template>
-                        </section>
-
-                        <section data-route="settings">
-                            <template is="dom-if" if="{{isSelected(data.pageName, 'settings')}}">
-                                <link rel="import" href="elements/tpa-pages/tpa-settings-page.html">
-                                <tpa-settings-page></tpa-settings-page>
-                            </template>
-                        </section>
-
-                        <section data-route="feedback">
-                            <template is="dom-if" if="{{isSelected(data.pageName, 'feedback')}}">
-                                <link rel="import" href="elements/tpa-pages/tpa-feedback-page.html">
-                                <tpa-feedback-page></tpa-feedback-page>
-                            </template>
-                        </section>
-                    </neon-animated-pages>
-                </tpa-container>
+                    <tpa-quick></tpa-quick>
+                </template>
             </app-header-layout>
         </div>
     </paper-drawer-panel>
 
-    <tpa-quick></tpa-quick>
+
 
     <tpa-notification></tpa-notification>
 
@@ -231,10 +188,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 </template>
 
-
 <!-- build:js scripts/app.js -->
 <script src="scripts/app.js"></script>
 <!-- endbuild-->
+
 </body>
 
 </html>
