--- a/app/elements/tpa-welcome/tpa-welcome.html
+++ b/app/elements/tpa-welcome/tpa-welcome.html
@@ -74,15 +74,9 @@
             position: absolute;
             bottom: 70px;
             background-color: rgba(0, 0, 0, 0.3);
-            padding: 20px 0;
+            height: 150px;
         }
 
-        #layover .content {
-            width: 70%;
-            height: 60px;
-            padding: 10px;
-            margin: 0 auto;
-        }
 
         #text {
             text-shadow: 2px 2px rgba(0, 0, 0, 0.5);
@@ -147,11 +141,7 @@
 
             </tpa-container>
 
-            <div id="layover">
-                <tpa-container>
-                    <paper-input id="input" label="How we can help you ?"></paper-input>
-                </tpa-container>
-            </div>
+            <div id="layover"></div>
 
         </section>
     </template>
