--- a/app/elements/tpa-welcome/tpa-welcome.html
+++ b/app/elements/tpa-welcome/tpa-welcome.html
@@ -101,7 +101,7 @@
 
     <template>
 
-        <iron-localstorage id="localstorage" name="login"></iron-localstorage>
+        <iron-localstorage id="localstorage" name="login" value="{{loggedin}}"></iron-localstorage>
 
         <tpa-reactive-user id="reactiveUser"></tpa-reactive-user>
 
@@ -148,6 +148,12 @@
     <script>
         Polymer({
             is: "tpa-welcome",
+            properties: {
+              loggedin: {
+                type: Boolean,
+                notify: true
+              }
+            },
             ready: function () {
                 this.$.reactiveUser.subscribe(function (user) {
                     console.log(user)
