fix build serve:dist

--- a/app/elements/tpa-quick/tpa-quick.html
+++ b/app/elements/tpa-quick/tpa-quick.html
@@ -5,8 +5,10 @@
 
 <link rel="import" href="../../bower_components/paper-fab/paper-fab.html">
 <link rel="import" href="../../bower_components/paper-button/paper-button.html">
+<!--Forgot bower or something?
 <link rel="import" href="../../bower_components/paper-fab-menu/paper-fab-menu.html">
 <link rel="import" href="../../bower_components/paper-fab-menu/paper-fab-menu-item.html">
+-->
 <link rel="import" href="../../bower_components/tpa-toast-action/tpa-toast-action.html">
 
 <link rel="import" href="../../bower_components/tpa-reactive/tpa-reactive-user.html">
