Move theme colors to Outside elements.html into index.html to fix serve:dist theme

--- a/app/index.html
+++ b/app/index.html
@@ -56,6 +56,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <!-- For shared styles, shared-styles.html import in elements.html -->
     <style is="custom-style" include="shared-styles"></style>
 
+    <!-- Place the Theme fonts here, do not Vulcanize -->
+    <link rel="import" href="../bower_components/tpa-styles/app-theme.html">
+    <link rel="import" href="../bower_components/tpa-styles/typography.html">
+    <link rel="import" href="../bower_components/tpa-styles/shared-styles.html">
+
 </head>
 
 <body unresolved>
