--- a/app/index.html
+++ b/app/index.html
@@ -85,7 +85,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <tpa-reactive-products></tpa-reactive-products>
         <tpa-reactive-user></tpa-reactive-user>
     </tpa-reactive-hub>
-
+    <iron-signals on-iron-signal-loggedin-update="handleLoggedInEvent"></iron-signals>
+    
     <tpa-ajax auto id="getBootstrapData" url="{{services.bootstrap}}" handle-as="json"
               last-response="{{bootstrapResponse}}"></tpa-ajax>
 
@@ -118,10 +119,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                     <tpa-top-bar class="paper-header"></tpa-top-bar>
                 </app-header>
 
-                <iron-localstorage name="login" value="{{loggedin}}"></iron-localstorage>
+                <iron-localstorage id="loginstore" name="login" value="{{loggedin}}"></iron-localstorage>
 
                 <template is="dom-if" if="[[!loggedin]]">
-                    <tpa-welcome loggedin="{{loggedin}}"></tpa-welcome>
+                    <tpa-welcome></tpa-welcome>
                 </template>
 
                 <!-- Main Content -->
