--- a/app/index.html
+++ b/app/index.html
@@ -131,6 +131,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                                 <tpa-daily-banking></tpa-daily-banking>
                             </section>
 
+                            <section data-route="inbox">
+                                <template is="dom-if" if="{{isSelected(data.pageName, 'inbox')}}">
+                                    <link rel="import" href="elements/tpa-pages/tpa-inbox-page.html">
+                                    <tpa-inbox-page></tpa-inbox-page>
+                                </template>
+                            </section>
+
                             <section data-route="settings">
                                 <template is="dom-if" if="{{isSelected(data.pageName, 'settings')}}">
                                     <link rel="import" href="elements/tpa-pages/tpa-settings-page.html">
