Fix Iphone6 view

--- a/app/elements/tpa-welcome/tpa-welcome.html
+++ b/app/elements/tpa-welcome/tpa-welcome.html
@@ -141,7 +141,7 @@
 
             </tpa-container>
 
-            <div id="layover"></div>
+            <!--<div id="layover"></div> blocks ios-->
 
         </section>
     </template>
