--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -42,6 +42,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <link rel="import" href="../bower_components/platinum-sw/platinum-sw-cache.html">
 <link rel="import" href="../bower_components/platinum-sw/platinum-sw-register.html">
+<link rel="import" href="../bower_components/platinum-push-messaging/platinum-push-messaging.html">
 
 <link rel="import" href="../bower_components/app-route/app-location.html">
 <link rel="import" href="../bower_components/app-route/app-route.html">
@@ -55,4 +56,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/tpa-styles/shared-styles.html">
 <link rel="import" href="../bower_components/tpa-font/tpa-font.html">
 <link rel="import" href="../bower_components/tpa-icons/tpa-icons.html">
+
+<link rel="import" href="../bower_components/paper-swipe/paper-swipe.html">
+<link rel="import" href="tpa-item-list/tpa-item-list.html">
+<link rel="import" href="tpa-item/tpa-list-item.html">
 
