box shadow and make sure include inbox style on dist

--- a/app/index.html
+++ b/app/index.html
@@ -115,7 +115,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <div main>
 
             <app-header-layout has-scrolling-region>
-                <app-header effects="material" reveals>
+                <app-header style="box-shadow: 0 0 4px rgba(0,0,0,.14), 0 4px 8px rgba(0,0,0,.28);" effects="material" reveals>
                     <tpa-top-bar class="paper-header"></tpa-top-bar>
                 </app-header>
 
