fix so inbox will switch between mobile and desktop

--- a/app/elements/tpa-container/tpa-container.html
+++ b/app/elements/tpa-container/tpa-container.html
@@ -19,7 +19,7 @@
 
         @media (max-width: 800px) {
             .container {
-                max-width: 400px;
+                padding:0px;
             }
         }
     </style>
